Fixed more findbugs defects.
git-svn-id: http://rote.dcs.gla.ac.uk/svn-repositories/whitespace4j@23 0cd3ce40-ee23-0410-9f7c-c558b81eff27